# practice_PM02_Buzin

./: Day1 diary added.docx  Day_7.docx  Day_8.docx  README.md
Day 1/: Day1 diary added.docx  README.md
Day 10/: Day10 diary added.docx  Day9 diary added.docx  README.txt  conftest.py  fake_validator.py  requirements.txt  specification.md  test_validate_order.py
Day 11/: 1_Infrastructure_Inventory.xlsx.xlsx  2_Backup_Policy.md  3_Recovery_Runbook.md  4_Disaster_Recovery_Test_Report.md  Day11 diary added.docx
Day 12/: Day12 diary added.docx  report.txt  requirements.txt  test_variant4.py  variant4.py  variant4_fixed.py
Day 13/: Day13 diary added.docx
Day 14/: Day14 diary added.docx
Day 15/: Day15diary added.docx  README.txt  pytest.ini  requirements.txt
Day 16/: Day16 diary added.docx
Day 17/: Day17 diary added.docx  README.txt  requirements.txt  (+1 more)
Day 18/booking_system/: mypy.ini  pyproject.toml  pytest.ini  tox.ini
Day 18/booking_system/requirements/: dev.txt  test.txt
Day 18/booking_system/src/application/: dto.py  interfaces.py  services.py
Day 18/booking_system/src/core/: __init__.py  domain.py  events.py  exceptions.py
Day 18/booking_system/src/infrastructure/: external_api.py  repositories.py  uow.py
Day 18/booking_system/src/presentation/: api.py  cli.py
Day 18/booking_system/src/utils/: logger.py  validators.py
Day 18/booking_system/tests/fixtures/: data_factory.py
Day 18/booking_system/tests/integration/: test_api.py  test_repositories.py
Day 18/booking_system/tests/unit/: test_domain.py  test_services.py  test_validators.py
(+95 files in other folders)
